crates/snapshot-tests/tests/snapshots/parser__bad_table_names__newline.snap
---
source: crates/snapshot-tests/tests/parser.rs
expression: combined
---
error[UnterminatedString]: unterminated basic string, expected `"`
  ┌─ newline:1:3
  │
1 │ ["
  │   ^ expected `"`


error: unterminated basic string, expected `"`
 --> newline:1:3
  |
1 | ["
  |   ^ expected `"`
Error {
    kind: "UnterminatedString",
    message: "unterminated basic string, expected `\"`",
    span: 2..2,
    path: None,
}
